[package]
name = "flood"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.3" }
clap = { version = "4.5.37", features = ["derive"] }
console-subscriber = "0.4.1"
derivative = "2.2.0"
eyre = "0.6.12"
futures = "0.3.31"
local-ip-address = "0.6.3"
mdns-sd = "0.13.8"
rand = { version = "0.9.1", features = ["small_rng"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tokio-util = { version = "0.7.15", features = ["tracing"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
